--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@prisma/client": "^5.21.1",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
+    "bcrypt": "^5.1.1",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
     "prisma": "^5.21.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.7",
     "eslint": "^9.14.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
