--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
     "prisma": "^5.21.1",
+    "socket.io": "^4.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
@@ -25,6 +26,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/socket.io": "^3.0.2",
     "eslint": "^9.14.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
