--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,7 @@
     "semi": true,
     "singleQuote": true,
     "printWidth": 80,
-    "trailingComma": "es5"
+    "trailingComma": "es5",
+    "endOfLine": "lf" 
   }
   
