--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "lint": "eslint 'src/**/*.{ts,tsx}'"
+    "lint": "eslint src",
+    "dev": "nodemon"
   },
   "keywords": [],
   "author": "",
@@ -28,8 +29,10 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/socket.io": "^3.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
     "eslint": "^9.14.0",
-    "husky": "^9.1.6",
+    "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3"
