--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prisma": "^5.21.1",
     "socket.io": "^4.8.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "winston": "^3.16.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
